# dao/service_grpc_rule.go
@@ -1,0 +1,48 @@
+package dao
+
+import (
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
+)
+
+type GrpcRule struct {
+	ID        int64 `json:"id" gorm:"primary_key"`
+	ServiceID int64 `json:"service_id" gorm:"column:service_id" description:"服务id	"`
+	Port      int   `json:"port" gorm:"column:port" description:"端口	"`
+	HeaderTransfor string `json:"header_transfor" gorm:"column:header_transfor" description:"header转换支持增加(add)、删除(del)、修改(edit) 格式: add headname headvalue"`
+}
+
+func (t *GrpcRule) TableName() string {
+	return "gateway_service_grpc_rule"
+}
+
+func (t *GrpcRule) Find(c *gin.Context, tx *gorm.DB, search *GrpcRule) (*GrpcRule, error) {
+	out := &GrpcRule{}
+	err := tx.WithContext(c).Where(search).Find(out).Error
+	//err := tx.SetCtx(c).Where(search).Find(area).Error
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+func (t *GrpcRule) Save(c *gin.Context, tx *gorm.DB) error {
+	return tx.WithContext(c).Save(t).Error
+}
+
+func (t *GrpcRule) ListByServiceID(c *gin.Context, tx *gorm.DB, serviceID int64) ([]GrpcRule, int64, error) {
+	var list []GrpcRule
+	var count int64
+	query := tx.WithContext(c)
+	query = query.Table(t.TableName()).Select("*")
+	query = query.Where("service_id=?", serviceID)
+	err := query.Order("id desc").Find(&list).Error
+	if err != nil && err != gorm.ErrRecordNotFound {
+		return nil, 0, err
+	}
+	errCount := query.Count(&count).Error
+	if errCount != nil {
+		return nil, 0, err
+	}
+	return list, count, nil
+}
+
